# dodi

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
dodi/: input_stream_alignments.cpp  input_stream_alignments.pyx  io_funcs.cpp  io_funcs.pxd  io_funcs.pyx  itree_wrapper.h  main.py  pairing.cpp  pairing.pxd  pairing.pyx  samclips.cpp  samclips.pxd  samclips.pyx  sv2fq.pyx
